[package]
name = "easy_i18n"
version = "0.1.0"
edition = "2021"
authors = ["flyinsky <flyinksy@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["i18n"]
description = "A simple i18n tool"
repository = "https://github.com/zjhsd2007/easy_i18n"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.71"
regex = "1.8.4"
once_cell = "1.18.0"